[project]
name = "python-dsa-tutorial"
version = "0.1.0"
authors = [{name = "Your Name"}]
description = "Hands-on, tutorial-style Data Structures & Algorithms in Python with theory-first implementation."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["data-structures", "algorithms", "python", "tutorial", "education"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.pyright]
typeCheckingMode = "basic"
